[metadata]
name=pygtk_ohp_app
version=0.0.1
license=Apache2.0
author=Takashi Masuyama
author_email=mamewotoko@gmail.com
long_description=file:README.md
ong_description_content_type = text/markdown
url = https://github.com/mamewotoko/pygtk_ohp_app
project_urls =
    Bug Tracker = https://github.com/mamewotoko/pygtk_ohp_app/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
scripts = bin/gtk3_ohp.py
include_package_data = True
python_requires = >=3.6
install_requires=
	wheel
	pgi
	pycairo
	svgwrite
	websocket-client
entry_points = file: entry_points.cfg

[options.data_files]
icon = data/icon/suke_icon.png
